fixed viewport bug on mobile. fixed html5 mistake. fixed resulting bugs

--- a/static/autumn.css
+++ b/static/autumn.css
@@ -189,14 +189,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
     font-family: Dosis, sans-serif;
     font-size: 1.5em;
+    /* fixes mobile viewport bug/feature */
+    min-height: -webkit-fill-available;
+}
+
+html {
+    height: -webkit-fill-available;
 }
 
 .main {
     width: 80%;
-    height: 80%;
+    height: 80vh;
     position: relative;
     max-width: 850px;
     max-height: 650px;
@@ -234,6 +240,7 @@ body {
 
 .content {
     min-height: 60%;
+    flex: 1;
 }
 
 .content #bad {
@@ -454,12 +461,12 @@ body {
 /*---------------------Media Querries--------------------*/
 /*-------------------------------------------------------*/
 
-@media only screen and (max-width: 30em) {
+@media only screen and (max-width: 35em) {
     .sub-rectangle {
         display: none;
     }
     .content-wrapper {
-        padding: 2rem;
+        padding: 2.3rem;
     }
     .heading-container h1 {
         font-size: 2.2rem;
